[gd_scene load_steps=5 format=3 uid="uid://dihmtlsqotvsp"]

[ext_resource type="Script" path="res://scripts/ui/item_tooltip.gd" id="1_uojyg"]

[sub_resource type="LabelSettings" id="LabelSettings_8bqtw"]
font_size = 12
font_color = Color(0.704643, 1, 0.687479, 0.705882)

[sub_resource type="LabelSettings" id="LabelSettings_lqic5"]
font_color = Color(1, 1, 1, 0.705882)

[sub_resource type="LabelSettings" id="LabelSettings_6dlyx"]
font_size = 12
font_color = Color(1, 1, 1, 0.705882)

[node name="ItemTooltip" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uojyg")

[node name="ItemPrice" type="Label" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -32.0
offset_right = 110.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_8bqtw")
clip_text = true

[node name="ItemName" type="Label" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -11.0
offset_right = 192.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_lqic5")
clip_text = true
text_overrun_behavior = 3

[node name="Tooltip" type="Label" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = 18.0
offset_right = 208.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_6dlyx")
autowrap_mode = 2
clip_text = true

[node name="ItemTextBackground" type="ColorRect" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 43.0
offset_top = -20.0
offset_right = 93.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
color = Color(0.0567, 0.07, 0.0589167, 1)
